feat: restructure project for Level 2 multi-container architecture

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,31 @@
 *.tmp
 *.swp
 .idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+node_modules/
+dist/
+build/
+venv/
+__pycache__/
+*.pyc
+*.pyo
+env/
+instance/
+.pytest_cache/
+.coverage
+.coverage.*
+.cache/
+nosetests.xml
+coverage.xml
+*.coverage
+*.egg-info/
+.eggs/
+*.egg
+*.pot
+.git/
+.gitignore
+.dockerignore
+.env
+*.env
