fix: add missing code copy and correct CMD format in Dockerfile

--- a/devops-projects/techshop-v1/backend/Dockerfile
+++ b/devops-projects/techshop-v1/backend/Dockerfile
@@ -6,8 +6,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /app
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
+COPY app/ app/app/
+COPY app.py /app/
 RUN groupadd -r myuser && useradd -r -g myuser -u 1000 -m myuser
 RUN chown -R myuser:myuser /app
 USER myuser
 EXPOSE 5000
-CMD ["gunicorn -w 4 -b 0.0.0.0:5000 app:app"]
+CMD ["gunicorn", "--workers", "4", "--bind", "0.0.0.0:5000", "app:app"]
