feat: add basic frontend-backend integration with dynamic product loading

--- a/devops-projects/techshop-v1/backend/Dockerfile
+++ b/devops-projects/techshop-v1/backend/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /app
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
-COPY app/ app/app/
+COPY app/ /app/app/
 COPY app.py /app/
 RUN groupadd -r myuser && useradd -r -g myuser -u 1000 -m myuser
 RUN chown -R myuser:myuser /app
