feat: add Nginx reverse proxy for backend API with CORS support

--- a/devops-projects/techshop-v1/frontend/nginx/nginx.conf
+++ b/devops-projects/techshop-v1/frontend/nginx/nginx.conf
@@ -10,7 +10,7 @@ events {
 # HTTP сервер
 http {
     # Включаем определение MIME типов
-    include /etc/nginx/mime.types;
+    include /opt/homebrew/etc/nginx/mime.types;
     default_type application/octet-stream;
 
     # Формат логов
@@ -58,8 +58,24 @@ http {
 
         # Основной location блок
         location / {
-            # Порядок поиска файлов: файл → директория → 404
-            try_files $uri $uri/ =404;
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /api/ {
+            if ($request_method = OPTIONS) {
+                add_header Access-Control-Allow-Origin '*';
+                add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header Access-Control-Allow-Headers 'Content-Type, Authorization';
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+
+            proxy_pass http://backend:5000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Кэширование статичных ресурсов
