--- a/devops-projects/techshop-v1/frontend/nginx/nginx.conf
+++ b/devops-projects/techshop-v1/frontend/nginx/nginx.conf
@@ -10,7 +10,7 @@ events {
 # HTTP сервер
 http {
     # Включаем определение MIME типов
-    include /opt/homebrew/etc/nginx/mime.types;
+    include mime.types;
     default_type application/octet-stream;
 
     # Формат логов
@@ -61,7 +61,9 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
+        # API reverse proxy
         location /api/ {
+            # CORS preflight
             if ($request_method = OPTIONS) {
                 add_header Access-Control-Allow-Origin '*';
                 add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
@@ -71,7 +73,7 @@ http {
                 return 204;
             }
 
-            proxy_pass http://backend:5000/;
+            proxy_pass http://backend:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
