--- a/devops-projects/techshop-v1/docker-compose.yaml
+++ b/devops-projects/techshop-v1/docker-compose.yaml
@@ -71,6 +71,25 @@ services:
     networks:
       - techshop-network
 
+  grafana:
+    image: grafana/grafana:latest
+    container_name: techshop-grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER}
+      - GF_INSTALL_PLUGINS=grafana-piechart-panel
+    depends_on:
+      - prometheus
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+    restart: always
+    networks:
+      - techshop-network
+
 networks:
   techshop-network:
     driver: bridge
@@ -78,3 +97,4 @@ networks:
 volumes:
   postgres-data:
   prometheus-data:
+  grafana-data:
