--- a/devops-projects/techshop-v1/backend/Dockerfile
+++ b/devops-projects/techshop-v1/backend/Dockerfile
@@ -7,9 +7,9 @@ WORKDIR /app
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 COPY app/ /app/app/
-COPY app.py /app/
+COPY wsgi.py /app/
 RUN groupadd -r myuser && useradd -r -g myuser -u 1000 -m myuser
 RUN chown -R myuser:myuser /app
 USER myuser
 EXPOSE 5000
-CMD ["gunicorn", "--workers", "4", "--bind", "0.0.0.0:5000", "app:app"]
+CMD ["gunicorn", "--workers", "4", "--bind", "0.0.0.0:5000", "wsgi:app"]
