--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
     branches: [ main, level-2-development ]
 
 jobs:
+
   backend-lint:
     runs-on: ubuntu-latest
 
@@ -19,55 +20,26 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-lint-${{ hashFiles('**/requirements.txt') }}
+
+      - name: Install flake8
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
+          pip install flake8==6.1.0
 
       - name: Run flake8
         run: |
-          flake8 devops-projects/techshop-v1/backend/ --max-line-length=120 --exclude=__pycache__
-
-  build-images:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build Frontend Docker image
-        run: |
-          docker build -t techshop-frontend:ci devops-projects/techshop-v1/frontend
-
-      - name: Build Backend Docker image
-        run: |
-          docker build -t techshop-backend:ci devops-projects/techshop-v1/backend
-
-  validate-compose:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Validate docker-compose.yml
-        run: |
-            docker compose config
-
-      - name: Create test .env
-        run: |
-            cat > .env << EOF
-            POSTGRES_USER=test
-            POSTGRES_PASSWORD=test
-            POSTGRES_DB=testdb
-            SECRET_KEY=test-secret
-            EOF
+          flake8 devops-projects/techshop-v1/backend/ \
+            --max-line-length=120 \
+            --exclude=__pycache__
 
   backend-test:
     runs-on: ubuntu-latest
+    needs: backend-lint
 
     services:
       postgres:
@@ -78,6 +50,17 @@ jobs:
           POSTGRES_DB: testdb
         ports:
           - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U test"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+    env:
+      POSTGRES_USER: test
+      POSTGRES_PASSWORD: test
+      POSTGRES_DB: testdb
+      SECRET_KEY: test-secret
 
     steps:
       - name: Checkout code
@@ -88,6 +71,22 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-test-${{ hashFiles('**/requirements.txt') }}
+
+      - name: Install Postgres client
+        run: sudo apt-get update && sudo apt-get install -y postgresql-client
+
+      - name: Wait for Postgres
+        run: |
+          until pg_isready -h localhost -p 5432; do
+            echo "Waiting for postgres..."
+            sleep 2
+          done
+
       - name: Install dependencies
         run: |
           pip install -r devops-projects/techshop-v1/backend/requirements.txt
@@ -96,4 +95,52 @@ jobs:
       - name: Run tests
         run: |
           cd devops-projects/techshop-v1/backend
-          pytest test/ -v
+          pytest test/ -v --maxfail=1 --disable-warnings
+
+  validate-compose:
+    runs-on: ubuntu-latest
+    needs: backend-test
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Create test .env
+        run: |
+          cat > .env << EOF
+          POSTGRES_USER=test
+          POSTGRES_PASSWORD=test
+          POSTGRES_DB=testdb
+          SECRET_KEY=test-secret
+          EOF
+
+      - name: Show Docker & Compose versions
+        run: |
+          docker --version
+          docker compose version
+
+      - name: Validate docker-compose.yml
+        run: docker compose config
+
+  build-images:
+    runs-on: ubuntu-latest
+    needs: validate-compose
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build Frontend Docker image
+        run: |
+          docker build \
+            -t techshop-frontend:ci \
+            devops-projects/techshop-v1/frontend
+
+      - name: Build Backend Docker image
+        run: |
+          docker build \
+            -t techshop-backend:ci \
+            devops-projects/techshop-v1/backend
