--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           flake8 devops-projects/techshop-v1/backend/ \
           --max-line-length=120 \
           --exclude=__pycache__ \
-          --ignore=E302,E301,W293,W292,E501
+          --ignore=E302,E301,W293,W292,E501,F401,W291
 
   backend-test:
     runs-on: ubuntu-latest
