--- a/devops-projects/techshop-v1/.env.example
+++ b/devops-projects/techshop-v1/.env.example
@@ -1,4 +1,4 @@
-POSTGRES_USER=sergey
+POSTGRES_USER=your_username
 POSTGRES_PASSWORD=your-password
 POSTGRES_DB=techshop
 POSTGRES_HOST=localhost
@@ -7,7 +7,7 @@ POSTGRES_PORT=5432
 FLASK_APP=app.py
 FLASK_ENV=development
 SECRET_KEY=your-secret-key
-URL_POSTGRES=postgresql://sergey:your-password@localhost:5432/techshop
+URL_POSTGRES=postgresql://your_username:your-password@localhost:5432/techshop
 
 URL_BACKEND=http://localhost:5000
 
